--- a/src/views/index.jinja
+++ b/src/views/index.jinja
@@ -3,7 +3,7 @@
     <head>
         <title>Pynance Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="views/css/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
         <link href="views/css/pynance.css" rel="stylesheet" media="screen">
     </head>
     <body>
