--- a/src/views/index.jinja
+++ b/src/views/index.jinja
@@ -4,7 +4,7 @@
         <title>Pynance Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
-        <link href="views/css/pynance.css" rel="stylesheet" media="screen">
+        <link href="/css/pynance.css" rel="stylesheet" media="screen">
     </head>
     <body>
         <div class="head_box">
