--- a/src/views/css/pynance.css
+++ b/src/views/css/pynance.css
@@ -5,12 +5,12 @@
 
 body{
     /**background-color: #0cd37e;*/
-    background-image: url("../images/noisy_grid/noisy_grid.png");
+    background-image: url("/images/noisy_grid/noisy_grid.png");
 }
 
 div.head_box{
     background-color: #000;
-    background-image: url("../images/simple_dashed/simple_dashed.png");
+    background-image: url("/images/simple_dashed/simple_dashed.png");
     width: 100%;
     position: absolute;
 }
