--- a/src/views/index.jinja
+++ b/src/views/index.jinja
@@ -16,10 +16,11 @@
                     <input type="button"value="Sign-up" class="btn">
                 </form>
             </div>
-            <div class="ads_box">
+            <div class="pynance_promo">
                 <h1>Pynance</h1>
                 <p>Manage your finances</p>
             </div>
         </div>
+        <h1>Will I appear?</h1>
     </body>
 </html>
