Adding view element to indicate invalid log-in.

--- a/web/views/css/pynance.css
+++ b/web/views/css/pynance.css
@@ -26,6 +26,15 @@ div.login_box{
     position: relative;
 }
 
+div.login_info{
+    visibility: hidden;
+    padding: 3px;
+    width: 100%;
+    background-color: #f00;
+    color: #fff;
+    border-radius: 5px;
+}
+
 div.pynance_promo{
     color: #fff;
     padding: 20px 10px;
