--- a/web/views/index.jinja
+++ b/web/views/index.jinja
@@ -9,6 +9,9 @@
     <body>
         <div class="head_box">
             <div class="login_box">
+                <div class="login_info">
+                    Invalid log-in
+                </div>
                 <form>
                     <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
                     <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
