Set-up for AJAX log-in.
- Better styling of log-in fail indicator.
- Set-up of Javascript functions for log-in (index.js).
- Included Javascript in index.jinja.

Only problem now is that my local SQL isn't properly configured so I can't test
happy path log-in.

--- a/web/views/css/pynance.css
+++ b/web/views/css/pynance.css
@@ -29,10 +29,10 @@ div.login_box{
 div.login_info{
     visibility: hidden;
     padding: 3px;
-    width: 100%;
-    background-color: #f00;
+    background-color: #faa732;
     color: #fff;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 div.pynance_promo{
