--- a/web/views/index.jinja
+++ b/web/views/index.jinja
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
         <link href="/css/pynance.css" rel="stylesheet" media="screen">
+        <script type="text/javascript" language="javascript" src="scripts/jquery-2.1.1.js"></script>
+        <script type="text/javascript" language="javascript" src="scripts/index.js"></script>
     </head>
     <body>
         <div class="head_box">
@@ -13,8 +15,8 @@
                     Invalid log-in
                 </div>
                 <form>
-                    <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
-                    <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
+                    <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_username"><br>
+                    <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_password"><br>
                     <input type="submit" value="Log-in" class="btn btn-primary">
                     <input type="button"value="Sign-up" class="btn">
                 </form>
