--- a/web/views/index.jinja
+++ b/web/views/index.jinja
@@ -17,7 +17,7 @@
                 <form>
                     <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_username"><br>
                     <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_password"><br>
-                    <input type="submit" value="Log-in" class="btn btn-primary">
+                    <input type="button" value="Log-in" class="btn btn-primary" onclick="loginCheck()">
                     <input type="button"value="Sign-up" class="btn">
                 </form>
             </div>
