--- a/web/views/index.jinja
+++ b/web/views/index.jinja
@@ -1,30 +1,20 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Pynance Manager</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
-        <link href="/css/pynance.css" rel="stylesheet" media="screen">
-        <script type="text/javascript" language="javascript" src="scripts/jquery-2.1.1.js"></script>
-        <script type="text/javascript" language="javascript" src="scripts/index.js"></script>
-    </head>
-    <body>
-        <div class="head_box">
-            <div class="login_box">
-                <div class="login_info">
-                    Invalid log-in
-                </div>
-                <form>
-                    <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_username"><br>
-                    <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_password"><br>
-                    <input type="button" value="Log-in" class="btn btn-primary" onclick="loginCheck()">
-                    <input type="button"value="Sign-up" class="btn">
-                </form>
+{% extends "web/views/pynance.jinja" %}
+{% block content %}
+    <div class="head_box">
+        <div class="login_box">
+            <div class="login_info">
+                Invalid log-in
             </div>
-            <div class="pynance_promo">
-                <h1>Pynance</h1>
-                <p>Manage your finances</p>
-            </div>
+            <form>
+                <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_username"><br>
+                <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;" id="pynance_password"><br>
+                <input type="button" value="Log-in" class="btn btn-primary" onclick="loginCheck()">
+                <input type="button"value="Sign-up" class="btn">
+            </form>
         </div>
-    </body>
-</html>
+        <div class="pynance_promo">
+            <h1>Pynance</h1>
+            <p>Manage your finances</p>
+        </div>
+    </div>
+{% endblock %}
