Adding stuff for main app views.

--- a/web/views/css/pynance.css
+++ b/web/views/css/pynance.css
@@ -8,6 +8,10 @@ body{
     background-image: url("/images/noisy_grid/noisy_grid.png");
 }
 
+/*
+The following styles are specific to the home page.
+*/
+
 div.head_box{
     background-color: #000;
     background-image: url("/images/simple_dashed/simple_dashed.png");
@@ -41,3 +45,7 @@ div.pynance_promo{
     padding: 20px 10px;
     position: relative;
 }
+
+/*
+The following styles are specific to the main app.
+*/
