--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -1,5 +1,6 @@
 {% extends "web/views/pynance.jinja" %}
 {% block content %}
     <div class="app_box">
+        <h1>Dashboard</h1>
     </div>
 {% endblock %}
