Integrating dataTables into the main_app page.

--- a/web/views/pynance.jinja
+++ b/web/views/pynance.jinja
@@ -7,7 +7,7 @@
         <link href="/css/pynance.css" rel="stylesheet" media="screen">
         <script type="text/javascript" language="javascript" src="scripts/jquery-2.1.1.js"></script>
         {% for script in page_scripts %}
-            <script type="text/javascript" language="javascript" src="{{ script.location }}"></script>
+            <script type="text/javascript" language="javascript" src="{{ script }}"></script>
         {% endfor %}
     </head>
     <body>
