Adding dataTables and a mock table to main_app.
dataTables + Twitter Bootstrap should be awesome! (But we are not there yet...)

--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -2,5 +2,11 @@
 {% block content %}
     <div class="app_box">
         <h1>Dashboard</h1>
+        <table id="finance_summary" class="table">
+            <tr>
+                <td>Total Balance:</td>
+                <td>888</td>
+            </tr>
+        </table>
     </div>
 {% endblock %}
