--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -4,8 +4,9 @@
         <h1>Dashboard</h1>
         <table id="finance_summary" class="table">
             <tr>
-                <td>Total Balance:</td>
-                <td>888</td>
+                <td>Month</td>
+                <td>Number 1</td>
+                <td>Number 2</td>
             </tr>
         </table>
     </div>
