Kidding. This is where I introduce the module_name template variable.

--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -1,7 +1,7 @@
 {% extends "web/views/pynance.jinja" %}
 {% block content %}
     <div class="app_box">
-        <h1>Dashboard</h1>
+        <h1>{{ module_name }}</h1>
         <table id="finance_summary" class="table">
             <tr>
                 <td>Month</td>
