Added comment docs to templates.

--- a/web/views/pynance.jinja
+++ b/web/views/pynance.jinja
@@ -1,3 +1,12 @@
+{#
+The base template for pynance. All other templates should extend from this as
+much as possible. To extend from this template, just add content to the content
+block.
+
+Variables introduced:
+  page_scripts - an iterable of javascript file locations. These scripts will be
+  loaded into the page.
+#}
 <!DOCTYPE html>
 <html>
     <head>
