--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -1,3 +1,9 @@
+{#
+Template for the logged-in part of the web app.
+
+Variables
+  module_name - Text displayed at the top of the page.
+#}
 {% extends "web/views/pynance.jinja" %}
 {% block content %}
     <div class="app_box">
