--- a/web/views/main_app.jinja
+++ b/web/views/main_app.jinja
@@ -1,19 +1,16 @@
 {#
-Template for the logged-in part of the web app.
+Template for the logged-in part of the web app. All views for those parts of the
+web app that needs authentication should extends from this as much as possible.
 
 Variables
   module_name - Text displayed at the top of the page.
+  module_data - Block that extending views need to fill in.
 #}
 {% extends "web/views/pynance.jinja" %}
 {% block content %}
     <div class="app_box">
         <h1>{{ module_name }}</h1>
-        <table id="finance_summary" class="table">
-            <tr>
-                <td>Month</td>
-                <td>Number 1</td>
-                <td>Number 2</td>
-            </tr>
-        </table>
+        {% block module_data %}
+        {% endblock %}
     </div>
 {% endblock %}
